# stock_market_ai

./: .gitignore  agent.py  main.py  pyproject.toml
agents/: agent.py  financial_data_agent.py  news_agent.py
server/: news_server.py  server.py
servers/: financial_data_server.py
